# fitfile-customgpt-action

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: privacy-policy.html
fitfile_customgpt_action/: pyproject.toml
fitfile_customgpt_action/src/fitfile_customgpt_action/: message_registry.py  routes.py
fitfile_customgpt_action/tests/: conftest.py  test_placeholder.py
sample_data/: sample.FIT
src/fitfile_customgpt_action/: __init__.py  app.py  cli.py  client.py  message_registry.py  models.py  services.py
tests/: __init__.py  conftest.py  pytest_types.py  test_client.py  test_message_registry.py  test_services.py
