[project]
name = "fitfile-customgpt-action"
version = "0.1.0"
description = "Expose FIT file parsing and generation helpers through a FastAPI service for CustomGPT."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "fit-tool>=0.9.13",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[project.scripts]
fitfile-customgpt-action = "fitfile_customgpt_action.cli:main"
fitfile-customgpt-client = "fitfile_customgpt_action.client:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/fitfile_customgpt_action/routes.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_unimported = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["tests"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "fit_tool.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.4",
]
